<resources>
    <string name="app_name">CARACTERE</string>
    <string name="first_hanzi">字</string>
    <string name="BTN_See_Meaning">Traduction</string>
    <string name="BTN_Add_Learned">Connu</string>
    <string name="BTN_Goto_Next">Suivant</string>
<string name="BTN_Pre">Précedent</string>
    <string name="BTN_Start">Commence</string>
    <string name="dir_name">Caractère</string>
    <string name="File_00" >Hanzi_00.dat</string>
    <string name="File_01">Hanzi_01.dat</string>
    <string name="File_02">Hanzi_02.dat</string>
    <string name="File_mode">mode.dat</string>
</resources>